--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     </nav>
     <header>
         <h1>Full Stack Web Developper</h1>
+
     </header>
+    <div>
+        
+    </div>
     
 </body>
 </html>
