--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
     <!-- About -->
 
-        <div  id="about" class="container">
+        <div  id="about" class="container pt-5 pb-5">
             
         <!-- Nav tabs -->
             <ul class="nav nav-tabs " role="tablist">
@@ -100,22 +100,22 @@
     <!-- Projects -->
         <div id="projects" class="d-flex ">
             <div class="jumbotron m-1 text-center">
-                <h2 class="display-3">BET ASSET</h2>
-                <p class="lead">Réalisé sous WordPress avec un thème sur mesure, accompagnement client de A à Z </p>
+                <h2 class="display-5">BET ASSET</h2>
+                <p class="lead pt-3 pb-3">Réalisé sous WordPress avec un thème sur mesure, accompagnement client de A à Z </p>
                 <hr class="my-4">
                 <img src="./img/betassetscreen.png" alt="bet asset screenshot" class="img-fluid img-thumbnail col-8 col-sm-7 col-md-6 col-lg-5 col-xl-6">
                 <p class="lead m-3">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">En savoir-plus</a>
+                    <a class="btn btn-primary btn-md" href="#" role="button">En savoir-plus</a>
                 </p>
             </div>
 
             <div class="jumbotron m-1 text-center">
-                <h2 class="display-3">Portfolio</h2>
-                <p class="lead">Portfolio réalisé from scratch , en HTMl5, CSS3, Javascript ainsi que Bootstrap </p>
+                <h2 class="display-5">Portfolio</h2>
+                <p class="lead pt-3 pb-3">Portfolio réalisé from scratch , en HTMl5, CSS3, Javascript ainsi que Bootstrap </p>
                 <hr class="my-4">
                 <img src="./img/portfolioscreen.jpg" alt="this website screenshot" class="img-fluid img-thumbnail col-8 col-sm-7 col-md-6 col-lg-5 col-xl-6">
                 <p class="lead m-3">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">En savoir-plus</a>
+                    <a class="btn btn-primary btn-md" href="#" role="button">En savoir-plus</a>
                 </p>
             </div>
 
