--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
     <header class="container-fluid d-flex flex-column justify-content-center">
-        <h1 class="text-center text-white ">Full Stack Web Developper</h1>
+        <h1 class="text-center text-white ">Amar2050<br>Full Stack Web Developper</h1>
 
     </header>
     <div class="" >
