--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="navbar-collapse collapse" id="NavBarHamburger">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" onclick="dynamicNav()" href="#">Acceuil <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" onclick="dynamicNav()" href="#">Accueil <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" onclick="dynamicNav()" href="#about">Qui suis-je ?</a>
